Implement custom configuration system, unified keybinds, and favorites synchronization.
- Created annotation-driven AmiConfig system with a searchable, localized configuration screen.
- Implemented AmiWidgetFactory for dynamic configuration UI generation.
- Added a unified keybind handler and global 'A' key for favoriting.
- Improved favorites synchronization between AMI and EMI.
- Fixed critical bugs in indexing side-safety and drag-and-drop logic.
- Resolved heart icon rendering using modern 1.21.1 sprites.
- Expanded unit test coverage for config, filtering, and favorites.